--- a/app/views/play/display_full_meter_choice.erb
+++ b/app/views/play/display_full_meter_choice.erb
@@ -3,21 +3,23 @@
   <div id="meter">
   <button style="background-color: #2541c3"onclick="ChangePageTrophy()" type="button" class="btn btn-danger">
     Go For Trophy!</button>
+    <% if !current_user.active_player.opponent.nil? %>
   <button style="background-color: #2541c3"onclick="ChangePageChallenge()" type="button" class="btn btn-danger">
     Challenge!</button>
+        <% end %>
   </div>
 </div>
   <script>
     function ChangePageTrophy() {
+        $.ajax({
+            url: "play/end_current_challenge",
+            type: 'PUT'
+        });
         $('body').load('/play/display_trophy_select.html');
 
     }
 
   function ChangePageChallenge() {
-      $.ajax({
-          url: "play/make_new_challenge",
-          type: 'PUT'
-      });
       setTimeout($('body').load('/play/display_challenge_trophy_selection.html'), 200);
   }
 
