--- a/app/views/play/display_spinner.html.erb
+++ b/app/views/play/display_spinner.html.erb
@@ -54,7 +54,7 @@ var incorrectSound=createSoundBite("/sounds/incorrect.mp3");
 <% else %>
     <h1>You have been challenged!</h1>
     <br>
-    <button onclick="StartChallenge()" type="button" class="btn btn-primary btn-lg btn-block">
+    <button style="background-color: #2541c3" onclick="StartChallenge()" type="button" class="btn btn-primary btn-lg btn-block">
       Start Challenge!
     </button>
     <br>
