Fixed scrollbar issue

--- a/app/views/play/display_spinner.html.erb
+++ b/app/views/play/display_spinner.html.erb
@@ -84,9 +84,10 @@ var incorrectSound=createSoundBite("/sounds/incorrect.mp3");
     <% else %>
     <h3>Awaiting opponent...</h3>
 <% end %>
+<% if !current_user.active_player.is_inactive %>
 <br><br><button style="background-color: #2541c3" onclick="Resign()" type="button" class="btn btn-primary">
   RESIGN</button>
-
+<% end %>
 <script type ="text/javascript" charset="utf-8">
 
     <% if current_user.has_new_achievement %>
