--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,2 +1,5 @@
-<h2>Thank you for your purchase!</h2>
 
+<h2 class="text-center">Thank you for your purchase!</h2>
+<script>
+    $("body").load(window.location.href = "/play/display_full_meter_choice");
+</script>
