--- a/app/views/play/display_full_meter_choice.erb
+++ b/app/views/play/display_full_meter_choice.erb
@@ -3,10 +3,12 @@
   <div id="meter">
   <button style="background-color: #2541c3"onclick="ChangePageTrophy()" type="button" class="btn btn-danger">
     Go For Trophy!</button>
-    <% if !current_user.active_player.opponent.nil? %>
+    <% if !current_user.active_player.opponent.nil? && current_user.active_player.trophies.count > 0
+         if current_user.active_player.opponent.trophies.count > 0 %>
   <button style="background-color: #2541c3"onclick="ChangePageChallenge()" type="button" class="btn btn-danger">
     Challenge!</button>
-        <% end %>
+            <% end
+         end %>
   </div>
 </div>
   <script>
