Question rating page altered to reflect question difficulty. Questions now have average difficulty rating.

--- a/app/views/play/display_question_rating.html.erb
+++ b/app/views/play/display_question_rating.html.erb
@@ -1,13 +1,17 @@
 <div class="text-center">
     <h1>How did you feel about that?</h1><br><br>
-    <button style="background-color: #2541c3"id="fun" type="button" class="btn btn-primary btn-lg btn-block">
-      Radical!
+    <button style="background-color: #2541c3"id="easy" type="button" class="btn btn-primary btn-lg btn-block">
+      Easy
     </button>
     <br>
-    <button style="background-color: #2541c3"id="boring" type="button" class="btn btn-primary btn-lg btn-block">
-      Bummer...
+    <button style="background-color: #2541c3"id="moderate" type="button" class="btn btn-primary btn-lg btn-block">
+      Moderate
     </button>
     <br>
+    <button style="background-color: #2541c3"id="hard" type="button" class="btn btn-primary btn-lg btn-block">
+      Hard
+    </button>
+  <br>
     <button style="background-color: #2541c3"id="submit_question" type="button" class="btn btn-primary btn-lg btn-block">
       Submit a Question!
     </button>
@@ -16,28 +20,37 @@
 
 <script>
     $(function() {
-        $('#fun').click(function() {
-            <%= if !current_user.active_player.current_question.nil?
-                current_user.active_player.current_question.increment!(:rating)
-            end%>
-            ChangePage()
+        $('#easy').click(function() {
+            GetRating(1);
         });
-        $('#boring').click(function() {
-            <%= if !current_user.active_player.current_question.nil?
-                current_user.active_player.current_question.decrement!(:rating)
-            end%>
-            ChangePage()
+        $('#moderate').click(function() {
+            GetRating(2);
+        });
+        $('#hard').click(function() {
+            GetRating(3);
         });
         $('#submit_question').click(function() {
             $('body').load('<%= new_question_path %>');
         });
-        $.ajax({
-            url: "players/reset_question_properties",
-            type: 'PUT'
-        });
+
+        function GetRating(rating) {
+            $.ajax({
+                url: "questions/rate_current_question",
+                type: 'PUT',
+                dataType: 'json',
+                data: {'difficulty' : rating}
+            });
+            setTimeout(ChangePage, 500);
+        }
+
         function ChangePage()
         {
             var meter = <%= current_user.active_player.meter %>;
+
+            $.ajax({
+                url: "players/reset_question_properties",
+                type: 'PUT'
+            });
 
             if (meter >= <%= Player::FULL_METER_AMOUNT%>) {
                 $('body').load('/play/display_full_meter_choice.html');
