--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th>Rating</th>
+      <th>Rating(Avg)</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +15,7 @@
     <% @questions.each do |question| %>
       <tr>
         <td><%= question.title %></td>
-        <td><%= question.rating %></td>
+        <td><%= question.average_difficulty_rating %></td>
         <td><%= link_to 'Show', question %></td>
         <td><%= link_to 'Edit', edit_question_path(question) %></td>
         <td><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' } %></td>
