User profile and basic user statistics and achievements

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -30,6 +30,14 @@ h3 {
   font-family: "Arcade-Classic";
 }
 
+h6 {
+  font-family: "Arcade-Classic";
+}
+
+#profile {
+  padding: 50px;
+}
+
 #meter {
   margin: 0 auto;
 }
