--- a/app/views/play/display_user_profile.erb
+++ b/app/views/play/display_user_profile.erb
@@ -1,5 +1,30 @@
-<button style="background-color: #2541c3" onclick="GoBack()" type="button" class="btn btn-primary">
-  BACK</button><br>
+<div id="profile">
+    <button style="background-color: #2541c3" onclick="GoBack()" type="button" class="btn btn-primary">
+    BACK</button><br>
+    <br>
+  <h2>STATISTICS</h2>
+
+  <h6>Computer Science: <%= current_user.cs_counter.questions_correct %></h6>
+  <h6>Aquatic Animals: <%= current_user.aquatic_counter.questions_correct %></h6>
+  <h6>Memes: <%= current_user.memes_counter.questions_correct %></h6>
+  <h6>Basketball: <%= current_user.basketball_counter.questions_correct %></h6>
+  <h6>Literature: <%= current_user.literature_counter.questions_correct %></h6>
+  <h6>Music: <%= current_user.music_counter.questions_correct %></h6>
+  <br>
+  <h2>ACHIEVEMENTS</h2>
+  <% current_user.achievements.each do |achievement|  %>
+
+        <h6 ><%= achievement.title %></h6>
+    <% end %>
+    <% current_user.achievements.each do |achievement|  %>
+
+        <% trophy = achievement.category.trophy %>
+
+        <img id="trophy" src= <%= trophy.icon_path%>>
+
+    <% end %>
+</div>
+
 
 
 <script>
