--- a/app/views/play/display_friends.html.erb
+++ b/app/views/play/display_friends.html.erb
@@ -1,24 +1,49 @@
-<table style="width: 50%;margin: 0 auto;">
+<table style="width: 75%; margin: 0 auto;">
   <tr>
     <th colspan="3" style="text-align: center">Users</th>
   </tr>
-  <% for user in @users %>
-      <% if user.id != current_user.id  %>
-          <tr>
-            <td>
-              <%= image_tag user.avatar.url, style: 'border-radius: 50%;' %>
-            </td>
 
-            <td>
-              <%= user.email %>
-            </td>
+  <% if !@user %>
+      <% for user in @users %>
+          <% if user.id != current_user.id  %>
+              <tr>
+                <td>
+                  <%= image_tag user.avatar.url, style: 'border-radius: 50%;' %>
+                <td>
+                  <%= user.email %>
+                </td>
 
-            <td>
-              <%= link_to "Add Friend", friendships_path(:friend_id => user), :method => :post %>
-            </td>
+                <td>
+                  <%= link_to "Add Friend", friendships_path(:friend_id => user), :method => :post %>
+                </td>
 
-          </tr>
+              </tr>
+          <% end %>
       <% end %>
+  <% else %>
+
+      <tr>
+        <td>
+          <%= image_tag @user.avatar.url, style: 'border-radius: 50%;' %>
+        <td>
+          <%= @user.email %>
+        </td>
+
+        <td>
+          <%= link_to "Add Friend", friendships_path(:friend_id => @user), :method => :post %>
+        </td>
+
+      </tr>
+
   <% end %>
 
 </table>
+
+<div style="text-align:center; padding: 15px;" >
+<%= form_tag play_display_friends_path, :method => 'get' do %>
+    <p>
+      <%= text_field_tag :search, params[:search] %>
+      <%= submit_tag 'Search By Email', :name => nil, :class => 'btn' %>
+    </p>
+<% end %>
+</div>
