--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,19 +9,34 @@
           </div>
       <% end %>
       <% if user_signed_in? %>
-          <section style="text-align: center">
+          <% if current_user.hide_image %>
+              <section style="text-align: center">
+               <span data-remote="play/display_user_profile"
+                     data-toggle="modal"
+                     data-target="#basicModal">
+                     <%= image_tag '/images/original/missing.png', style: 'border-radius: 50%; height: 35px' %>
+               </span>
+
+          <% else %>
+              <section style="text-align: center">
               <span data-remote="play/display_user_profile"
                     data-toggle="modal"
                     data-target="#basicModal">
-            <%= image_tag current_user.avatar.url, style: 'border-radius: 50%; height: 35px' %>
+                    <%= image_tag current_user.avatar.url, style: 'border-radius: 50%; height: 35px' %>
               </span>
+          <% end %>
 
-            <strong> <%= current_user.email %></strong>
-            | <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-            | Level: <%= current_user.level %>
-            | Points: <%= current_user.points %>
-            | <%= link_to "Purchase Points", new_charge_path %>
-            <section style="padding-top: 10px;text-align: center">
+          <strong> <%= current_user.email %></strong>
+
+          | <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+
+          | Level: <%= current_user.level %>
+
+          | Points: <%= current_user.points %>
+
+          | <%= link_to "Purchase Points", new_charge_path %>
+
+          <section style="padding-top: 10px;text-align: center">
               <span data-remote="play/display_user_profile"
                     data-toggle="modal"
                     data-target="#basicModal">
@@ -44,17 +59,18 @@
                     <i class="fa fa-cog fa-3x fa-fw"></i>
               </span>
 
-              <% muteStatus = "fa fa-volume-up fa-3x fa-fw"
-                 if current_user.muted
-                   muteStatus = "fa fa-volume-off fa-3x fa-fw"
-                 end %>
+            <% muteStatus = "fa fa-volume-up fa-3x fa-fw"
+               if current_user.muted
+                 muteStatus = "fa fa-volume-off fa-3x fa-fw"
+               end %>
 
 
-              <span id="un-mute">
-                <i class="<%= muteStatus%>"></i>
+            <span id="un-mute">
+                <i class="<%= muteStatus %>"></i>
               </span>
 
-            </section>
+          </section>
+          </section>
           </section>
 
       <% end %>
