Can now delete friends

--- a/app/views/play/display_user_profile.erb
+++ b/app/views/play/display_user_profile.erb
@@ -30,6 +30,6 @@
 <script>
     function GoBack()
     {
-        $('body').load('play/index');
+        window.location.replace("/");
     }
 </script>
