--- a/app/views/play/display_friends.html.erb
+++ b/app/views/play/display_friends.html.erb
@@ -1,7 +1,12 @@
+<button style="background-color: #2541c3" onclick="GoBack()" type="button" class="btn btn-primary">
+    BACK</button><br>
+  <br>
+
 <table style="width: 75%; margin: 0 auto;">
   <tr>
     <th colspan="3" style="text-align: center">Users</th>
   </tr>
+
 
   <% if !@user %>
       <% for user in @users %>
@@ -14,7 +19,14 @@
                 </td>
 
                 <td>
-                  <%= link_to "Add Friend", friendships_path(:friend_id => user), :method => :post %>
+                <% if @friends.include? user %>
+
+                      <%= link_to "Delete Friend", Friendship.find_by_friend_id(user), :method => :delete %>
+
+                  <% else %>
+
+                    <%= link_to "Add Friend", friendships_path(:friend_id => user), :method => :post %>
+                  <% end %>
                 </td>
 
               </tr>
@@ -42,8 +54,15 @@
 <div style="text-align:center; padding: 15px;" >
 <%= form_tag play_display_friends_path, :method => 'get' do %>
     <p>
-      <%= text_field_tag :search, params[:search] %>
+      <%= email_field_tag :search, params[:search] %>
       <%= submit_tag 'Search By Email', :name => nil, :class => 'btn' %>
     </p>
 <% end %>
 </div>
+
+<script>
+    function GoBack()
+    {
+        window.location.replace("/");
+    }
+</script>
