--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -30,6 +30,14 @@ h3 {
   font-family: "Arcade-Classic";
 }
 
+h4 {
+  font-family: "karmatic";
+}
+
+h5 {
+  font-family: "Arcade-Classic";
+}
+
 h6 {
   font-family: "Arcade-Classic";
 }
