--- a/app/views/play/display_user_profile.erb
+++ b/app/views/play/display_user_profile.erb
@@ -1,20 +1,24 @@
-<div id="profile">
+<div class="text-center" id="profile">
     <button style="background-color: #2541c3" onclick="GoBack()" type="button" class="btn btn-primary">
     BACK</button><br>
     <br>
   <h2>STATISTICS</h2>
-
-  <h6>Computer Science: <%= current_user.cs_counter.questions_correct %></h6>
-  <h6>Aquatic Animals: <%= current_user.aquatic_counter.questions_correct %></h6>
-  <h6>Memes: <%= current_user.memes_counter.questions_correct %></h6>
-  <h6>Basketball: <%= current_user.basketball_counter.questions_correct %></h6>
-  <h6>Literature: <%= current_user.literature_counter.questions_correct %></h6>
-  <h6>Music: <%= current_user.music_counter.questions_correct %></h6>
+  <br>
+  <h4>QUESTIONS CORRECT BY CATEGORY</h4>
+  <div class="text-justify">
+  <h3>Computer Science: <%= current_user.cs_counter.questions_correct %></h3>
+  <h3>Aquatic Animals: <%= current_user.aquatic_counter.questions_correct %></h3>
+  <h3>Memes: <%= current_user.memes_counter.questions_correct %></h3>
+  <h3>Basketball: <%= current_user.basketball_counter.questions_correct %></h3>
+  <h3>Literature: <%= current_user.literature_counter.questions_correct %></h3>
+  <h3>Music: <%= current_user.music_counter.questions_correct %></h3>
+  </div>
   <br>
   <h2>ACHIEVEMENTS</h2>
+  <% if current_user.achievements.count > 0 %>
   <% current_user.achievements.each do |achievement|  %>
 
-        <h6 ><%= achievement.title %></h6>
+        <h6 class="text-justify"><%= achievement.title %></h6>
     <% end %>
     <% current_user.achievements.each do |achievement|  %>
 
@@ -23,6 +27,10 @@
         <img id="trophy" src= <%= trophy.icon_path%>>
 
     <% end %>
+      <% else %>
+      <br>
+  <h4>NONE</h4>
+      <% end %>
 </div>
 
 
@@ -33,3 +41,5 @@
         window.location.replace("/");
     }
 </script>
+
+
